Added CSS FILES

--- a/first.html
+++ b/first.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>FIRST HTML PAGE</title>
-    <link rel="stylesheet" href="css/first.css">
+    <style type="text/css">
+
+
+    body{
+    background-color: #070C32;
+      color:#D6D8E7;
+    }
+    h2
+    {
+      font-family: sans-serif;
+
+    }
+
+     h1:hover , h2:hover
+    {
+    background-color: #D6D8E7;
+    color: #070C32;
+    }
+
+    h3
+    {
+      font-family: monospace;
+        font-weight: normal;
+    }
+
+    ul li,ol li
+    {
+      font-family: monospace;
+    }
+
+    a{
+      font-size: 30px;
+      font-family:serif;
+    }
+
+    </style>
   </head>
   <body>
     <h1>LEVEL1 HTML</h1>
